z-index fix

--- a/Resources/Public/Styles/Page/macrotemplate.css
+++ b/Resources/Public/Styles/Page/macrotemplate.css
@@ -258,7 +258,7 @@ tbody tr:last-child td, tbody tr:last-child th {
     width: 100%;
     padding: 1em 0;
     top: 0;
-    z-index: 2;
+    z-index: 5;
     background: #fff;
 }
 
